Added some styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
     </nav>
     <main class="container mx-auto p-6 relative top-20">
       <div
-        class="bg-slate-700 w-full max-w-lg p-6 mx-auto rounded-lg shadow-lg mt-4"
+        class="bg-slate-700 w-full max-w-2xl p-6 mx-auto rounded-lg shadow-lg mt-4"
       >
-        <h2 class="text-xl text-slate-300 text-center md:text-start">
+        <h2 class="text-xl text-slate-300 text-center">
           Predict your chances of getting stroke
         </h2>
         <form class="flex flex-col space-y-3 mt-3">
