Added cursor pointer

--- a/static/output.css
+++ b/static/output.css
@@ -612,6 +612,10 @@ video {
   max-width: 42rem;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
